foolish/foolish-core/src/snapshots/foolish_core__approval_tests__complex_brane_with_all_operator_types.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 iQnT6AoSvnArmMS/ax83e14sMO3fNimkC04rSfEX9BgSlItUS79lGekrXB/O85Ju5oWb4YKNDnRK9X5bJevYDg==
INPUT: {add = 1 + 2; sub = 10 - 3; mul = 4 * 5; div = 20 / 4; neg = -7;}
[0] PARSED:
Brane [EMBRYONIC]
  add = 
  Operator(+) [EMBRYONIC]
    Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  sub = 
  Operator(-) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  mul = 
  Operator(*) [EMBRYONIC]
    Int(4) [INDEPENDENT]
    Int(5) [INDEPENDENT]
  div = 
  Operator(/) [EMBRYONIC]
    Int(20) [INDEPENDENT]
    Int(4) [INDEPENDENT]
  neg = 
  Operator(-) [EMBRYONIC]
    Int(7) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  add = 
  Int(3) [CONSTANT]
  sub = 
  Int(7) [CONSTANT]
  mul = 
  Int(20) [CONSTANT]
  div = 
  Int(5) [CONSTANT]
  neg = 
  Int(-7) [CONSTANT]
