foolish/foolish-core/src/snapshots/foolish_core__approval_tests__complex_concat_with_operations.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 1FSkh5333VWXB40zbSkUbykKRfe8rUp+bdy1KTKNghOaodGN+7QCS4k6UiJDe/RHaEbFpyw3ztwdyE6JRRZ1Aw==
INPUT: {a = {x=1+2}; b = {y=3*4}; c = a b;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    x = 
    Operator(+) [EMBRYONIC]
      Int(1) [INDEPENDENT]
      Int(2) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    y = 
    Operator(*) [EMBRYONIC]
      Int(3) [INDEPENDENT]
      Int(4) [INDEPENDENT]
  c = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Brane [CONSTANT]
    x = 
    Int(3) [CONSTANT]
  b = 
  Brane [CONSTANT]
    y = 
    Int(12) [CONSTANT]
  c = 
  Brane [CONSTANT]
    x = 
    Int(3) [CONSTANT]
    y = 
    Int(12) [CONSTANT]
