foolish/foolish-core/src/snapshots/foolish_core__approval_tests__complex_search_concat_and_seeks.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {data = {x=1, y=2, z=3}; copy = data {w=4}; last = copy#-1; first = copy#0;}
[0] PARSED:
Brane [EMBRYONIC]
  data = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
    z = 
    Int(3) [INDEPENDENT]
  copy = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^data$', dir=BACKWARD, FREE) [EMBRYONIC]
    Brane [EMBRYONIC]
      w = 
      Int(4) [INDEPENDENT]
  last = 
  Index(offset=-1, ANCHORED) [EMBRYONIC]
  first = 
  Index(offset=0, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  data = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
    z = 
    Int(3) [INDEPENDENT]
  copy = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
    z = 
    Int(3) [INDEPENDENT]
    w = 
    Int(4) [INDEPENDENT]
  last = 
  Int(4) [INDEPENDENT]
  first = 
  Int(1) [INDEPENDENT]
