foolish/foolish-core/src/snapshots/foolish_core__approval_tests__complex_sf_in_expression.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 P2tK2QALOq+DLsrPcXwLbXcAbMH2CQVayjVNX2j31lZhPkR7ZQzPCDCxjfNc+N4rl6INb4DeVkOw1LnSYtp2Ag==
INPUT: {x=10; y=<x>; z=y + 5;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(10) [INDEPENDENT]
  y = 
  StayFoolish [EMBRYONIC]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  z = 
  Operator(+) [EMBRYONIC]
    Search(pattern='^y$', dir=BACKWARD, FREE) [EMBRYONIC]
    Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  x = 
  Int(10) [INDEPENDENT]
  y = 
  StayFoolish [CONSTANT]
    Search(pattern='^x$', dir=BACKWARD, FREE) [CONSTANT]
      Int(10) [INDEPENDENT]
  z = 
  Int(15) [CONSTANT]
